Add GrowingTextView binding

--- a/MonoTouch.Controls/MonoTouch.Controls.csproj
+++ b/MonoTouch.Controls/MonoTouch.Controls.csproj
@@ -11,6 +11,7 @@
     <RootNamespace>MonoTouch.Controls</RootNamespace>
     <IPhoneResourcePrefix>Resources</IPhoneResourcePrefix>
     <AssemblyName>MonoTouch.Controls</AssemblyName>
+    <ReleaseVersion>1.0.0.0</ReleaseVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -24,7 +25,6 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>full</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release</OutputPath>
     <ErrorReport>prompt</ErrorReport>
@@ -46,4 +46,12 @@
     <ObjcBindingCoreSource Include="StructsAndEnums.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Xamarin.ObjcBinding.CSharp.targets" />
+  <ItemGroup>
+    <ObjcBindingNativeLibrary Include="libControls.a" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Include="libControls.linkwith.cs">
+      <DependentUpon>libControls.a</DependentUpon>
+    </Compile>
+  </ItemGroup>
 </Project>
